[package]
name = "rust-protonug"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }
surf = "2.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "0.2"
tar = "0.4"
regex = "1.5"
clap = "3.0"
